--- a/2 - Spring MVC/SpringMVC_Student/pom.xml
+++ b/2 - Spring MVC/SpringMVC_Student/pom.xml
@@ -20,6 +20,13 @@
   </properties>
 
   <dependencies>
+<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-validator</artifactId>
+    <version>6.1.5.Final</version>
+</dependency>
+
   <!-- https://mvnrepository.com/artifact/jstl/jstl -->
 <dependency>
     <groupId>jstl</groupId>
