--- a/2 - Spring MVC/SpringWebApp_Aadhar/pom.xml
+++ b/2 - Spring MVC/SpringWebApp_Aadhar/pom.xml
@@ -23,13 +23,28 @@
     <artifactId>jstl</artifactId>
     <version>1.2</version>
 </dependency>
-
 	<dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.31</version>
 </dependency>
 
+<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.2.3.Final</version>
+</dependency>
+<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator-cdi</artifactId>
+			<version>6.2.3.Final</version>
+</dependency>
+
+<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator-annotation-processor</artifactId>
+			<version>6.2.3.Final</version>
+</dependency>
 		<!-- Spring core & mvc -->
 		<dependency>
 			<groupId>org.springframework</groupId>
