--- a/5 - Hibernate ORM/Hibernate Basics/pom.xml
+++ b/5 - Hibernate ORM/Hibernate Basics/pom.xml
@@ -36,5 +36,21 @@
     <version>8.0.28</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/org.ehcache/ehcache -->
+<dependency>
+    <groupId>org.ehcache</groupId>
+    <artifactId>ehcache</artifactId>
+    <version>3.10.8</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-ehcache -->
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-ehcache</artifactId>
+    <version>5.6.14.Final</version>
+</dependency>
+
+
+
   </dependencies>
 </project>
